# PE-Hackathon-Template-2026

./: .coverage  .env.example  Decisions.md  README.md  RUNBOOK.md  events.csv  hackathon_db.sqlite  pyproject.toml  seed.py  test_404.py  urls.csv  users.csv
.github/workflows/: ci.yml
app/: __init__.py  database.py
app/models/: __init__.py  event.py  url.py  user.py
app/routes/: __init__.py
scripts/: init_db.py
tests/: test_app.py
